css/styles.css
/* ... */
h5 {
  color: var(--text-body);
  font-family: var(--font-family-heading);
  font-size: var(--font-size-h5);
  font-weight: 700;
  line-height: var(--line-height-h5);
  text-transform: uppercase;
}

h1, h2, h3, h4 {
  scroll-margin-top: calc(var(--header-height) + 1em);
}

p {
  font-family: var(--font-family-body);
  font-size: var(--font-size-body);
  line-height: 1.6rem;
  max-width: 60vw;
}

/*#endregion TEXT FORMATTING*/

main{
  display: flex;
  flex-direction: column;
  padding-top: var(--header-height);
  position: relative;
}
main:first-child {
  margin-top: 0;
}

.invisible {
  visibility: hidden;
}

@media screen and (max-width: 700px) {
  .invisible {
    visibility: collapse;
  }
}

/*#endregion base*/

/*=============== REUSABLE CSS CLASSES ===============*/
/*#region reusable classes*/

/* https://www.a11yproject.com/posts/how-to-hide-content/ */
.visually-hidden:not(:focus):not(:active) {
	clip: rect(0 0 0 0);
	clip-path: inset(50%);
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

/* Prevent visually-hidden skip link fom pushing content around when focused */
#skip-link.visually-hidden:focus {
	position: absolute;
	top: 1rem;
	left: 1rem;
	/* Ensure it is positioned on top of everything else when it is shown */
	z-index: 999;
}

.meta-container {
  display: flex;
  flex-grow: 1;
  max-width: 100em;
  padding-inline: 3rem;
  margin-inline: auto;
}

.links-nextprev {
	display: flex;
	justify-content: space-between;
  width: 100%;
	gap: .5em 1em;
	list-style: "";
	border-top: 1px dashed var(--color-gray-20);
	padding: 1em 0;
}

.links-nextprev > * {
	flex-grow: 1;
  max-width: 20%;
}

.links-nextprev li i {
  font-size: xx-large;
  color: var(--text-on-action);
}

.links-nextprev-prev {
  flex-direction: row !important;
}

.card.links-nextprev-next {
  justify-content: end;
}

.links-nextprev-next {
  flex-direction: row !important;
	text-align: right;
}

.container {
  margin-inline: 2.5rem;
}

/*#region Hero*/
.hero {
  /*Layout*/
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: stretch;
  align-self: stretch;
  gap: 1rem;
  /*Style*/
  background: var(--deep-purple-colour);
  color: var(--text-light-colour);
  
  padding: 2.5rem;
}

.hero h1 {
  color: var(--text-light-colour);
}

.heroLeft,
.heroRight {
  flex-grow: 1;
}

.heroLeft {
  display: flex;
  flex-direction: column;
  align-self: center;
  width: 50%;
  gap: 1rem;
}

.heroRight{
  display: flex;
  align-items: end;
  width: 50%;
}
.heroRight img {
  max-width: 100%;
  max-height: 400px;
  object-fit: contain;
  height: fit-content;
  vertical-align: bottom;
}

/* Hero for mobile devices */
@media screen and (max-width: 700px) {
  .hero {
    /*Layout*/
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: stretch;
    align-self: stretch;
    gap: 1.5rem;
    /*Style*/
    background: var(--deep-purple-colour);
    color: var(--text-light-colour);
  }
  .heroLeft,
  .heroRight {
    width: 100%;
  }
  .heroLeft {
    padding-bottom: 0;
  }
  .heroRight {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
  .heroRight img{
    max-height: 300px;
  }
}

/*#endregion Hero*/

/*#region Subpage Banner*/

.subpage-banner{
    /*Layout*/
  display: flex;
  flex-direction: row;
  justify-content:space-between;
  align-items: center;
  align-self: stretch;
  gap: 24px;
  padding: 24px 24px;
  /*Style*/
  background: var(--deep-purple-colour);
  color: var(--text-light-colour);
}

.subpage-banner h1 {
  flex-grow: 1;
  text-align: center;
  color: var(--text-light-colour);
}

.subpage-banner a {
  color: var(--text-light-colour);
}

.banner-text {
  width: 100%;
  align-content: center;
  text-align: center;

  display: flex;
  flex-direction: column;
  gap: 12px;
}

@media screen and (max-width: 700px) {
  .subpage-banner {
    flex-direction: column-reverse;
    gap: 1rem;
  }
}


/*#endregion Subpage Banner*/

/*#region Banner*/
.banner {
  /*Layout*/
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  align-self: stretch;
  gap: 0.5rem;
  padding: 0.5rem 2.5rem;
  /*Style*/
  background: var(--deep-purple-colour);
  color: var(--text-light-colour);
}

.banner a {
  color: var(--text-light-colour);
}

.banner h1 {
  flex-grow: 1;
  text-align: center;
  color: var(--text-light-colour);
}

@media screen and (max-width: 700px) {
  .banner {
    flex-direction: column;
    gap: 1rem;
  }
}
/*#endregion Banner*/

/*#region Sections*/

section {
  gap: 2.5rem;
  padding-top: 3.75rem;
  padding-bottom: 3.75rem;
}

section.top {
  padding-top: 4.5rem;
}

section.centre {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-self: center;
  justify-content: center;
  justify-self: center;
}

section.pink {
  background-color: var(--pink-colour);
}

section.violet {
  background-color: var(--dark-muddy-green);
}

/*Row within a section*/
.section-row {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
  gap: 1.5rem;
  align-self: stretch;
  align-items: center;
  justify-content: center;
  padding-left: 2rem;
  padding-right: 2rem;
}

.top-align {
  align-items: start;
}

.section-row.image-right {
  flex-wrap: wrap-reverse;
}

.section-row .row-column.text{
  padding-right: 4rem;
}

.section-row.image-right .row-column.text{
  padding-left: 4rem;
}

div.centre-text {
  text-align: center;
}

/*Column within a row*/
.row-column {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  flex: 1 1 0;
  max-width: 100%;
}

.row-column.text {
  align-items: flex-start;
  min-width: 9.375em;
}

.row-column.image {
  display: flex;
  align-self: center;
  justify-content: center;
  aspect-ratio: 16/9;
  max-height: 100%;
}

.diagram {
  display: flex;
  align-self: center;
  justify-content: center;
  align-content: center;
  aspect-ratio: 16/9;
  max-height: 70vh;
}
/* ... */

